<resources>
    <string name="app_name">SquadFinder</string>
    <string name="title_home_esdeveniments">Esdeveniments</string>
    <string name="title_grups">Grups</string>
    <string name="title_meus_grups_esdev">Meus G/E</string>
    <string name="title_meus_grups_esdev_toolbar">Meus Grups i Esdeveniments</string>
    <string name="title_pro">PRO</string>
    <string name="title_pro_toolbar">SquadFinder PRO</string>
    <string name="crear">Crear</string>
    <string name="crear_grup">Crear nou grup</string>
    <string name="crear_esdeveniment">Crear nou esdeveniment</string>
    <string name="filtrar">Filtrar</string>
    <string name="login_text_1">Introdueix les teves credencials</string>
    <string name="login_send_button">Enviar</string>
    <string name="intro_text_1">Selecciona una opció</string>
    <string name="login_button">Identificació</string>
    <string name="register_button">Registrar-se</string>
    <string name="title_activity_register">Registre</string>
    <string name="title_activity_login">Iniciar sessió</string>
    <string name="title_activity_create_event">Crear esdeveniment</string>
    <string name="title_activity_create_grup">Crear grup</string>
    <string name="title_activity_detailed_event">Detalls de l\'esdeveniment</string>
    <string name="title_activity_chat">Xat</string>
    <string name="title_activity_detailed_grup">Detalls del grup</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titol_detall_esdeveniment">Mitja Marató de Barcelona 2021</string>
    <string name="descripcio_detall_esdeveniment">L\'eDreams Mitja Marató de Barcelona tindrá lloc el 17 d\'octubre de 2021
            amb l\'objectiu de garantir la máxima seguretat dels corredors, públic i organitzadors.\n\nFira del corredor:
        Palau de Congressos de Barcelona (Av. Maria Cristina).\n\nHorari: dijous 14 d\'octubre de 17h a 21h, divendres 15 d\'octubre de 10h a 21h
            i dissabte 16 d\'octubre de 9h a 20h.\n\nTots els inscrits hauran de recollir el seu dorsal, o dorsal-xip, la bossa del corredor
            i la samarreta a la Fira del Corredor. És obligatòria la presentació;
            del DNI o passaport juntament amb el mail on s\'indica el número de dorsal
            (si no disposes d\'ell, el podrás descarregar de la web un cop estiguin adjudicats).
            Si no poguessis passar a recollir-lo en els dies indicats, pot fer-ho una altra persona per tu,
            presentant fotocópia del teu DNI o passaport juntament amb el resguard de la teva inscripció
            i l\'e-mail que indica el teu número de dorsal.\n\nInscriute a https://edreamsmitjabarcelona.com/inscripcion/
    </string>
    <string name="titol_detall_grup">Grup lliga de debat UPF</string>
    <string name="descripcio_detall_grup">Si t\'agrada discutir amb els amics sobre temes d\'actualitat, argumentar, parlar en públic, practicar
        i millorar les teves aptituds d\'oratòria, buscar els punts forts i febles d\'un discurs… Aquesta és la teva activitat!\n\nLa Lliga de Debat UPF pretén fomentar les tècniques de debat i oratòria. És una activitat dirigida a tots els estudiants de la comunitat universitària.\n\nA més, la lliga Societats de Debat, organitzada anualment per la Facultat de Ciències Econòmiques i Empresarials,
        s\'uneix a la lliga interna de la UPF, proposant temes de debat generals en economia i premis especials.
    </string>
    <string name="ubicacio_detall_esdeveniment"><p><strong>Ubicació: </strong>Passeig de Pujades, Barcelona</p></string>
    <string name="participants_detall_esdeveniment"><p><strong>Participants: </strong>650/8000</p></string>
    <string name="data_detall_esdeveniment"><p><strong>Data:</strong> 17/10/2021 8:30</p></string>
    <string name="title_activity_maps">Map</string>
    <string name="pro_slogan">Uneix-te a PRO i Treu el Millor de SquadFinder</string>
    <string name="idiomes_detall_grup">Català, Español, English</string>
    <string name="ubicacio_detall_grup">Online</string>
    <string name="titol_detall_grup_creador">Grup AiSM</string>
    <string name="idiomes_detall_grup_creador">Català, Español</string>
    <string name="descripcio_detall_grup_creador">
        Grup AiSM\nCreació app SquadFinder
    </string>
</resources>