<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?attr/actionBarSize">



    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toTopOf="@id/nav_view"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:navGraph="@navigation/mobile_navigation" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/create_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/purple_500"
        android:clickable="true"
        android:contentDescription="@string/crear"
        android:focusable="true"
        android:tintMode="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/nav_view"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_add" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/create_group_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        app:layout_constraintBottom_toTopOf="@+id/create_event_button"
        app:layout_constraintEnd_toEndOf="@+id/create_event_button"
        app:layout_constraintStart_toStartOf="@+id/create_event_button"
        app:srcCompat="@drawable/ic_group_add"
        android:focusable="true"
        android:tintMode="@android:color/white"
        android:contentDescription="@string/crear_grup"
        android:visibility="invisible"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/create_event_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        app:layout_constraintBottom_toTopOf="@+id/create_button"
        app:layout_constraintEnd_toEndOf="@+id/create_button"
        app:layout_constraintStart_toStartOf="@+id/create_button"
        app:srcCompat="@drawable/ic_add_event"
        android:focusable="true"
        android:contentDescription="@string/crear_esdeveniment"
        android:visibility="invisible"
        android:tintMode="@android:color/white"
        />

</androidx.constraintlayout.widget.ConstraintLayout>