<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailedGroupCreatorActivity"
    tools:showIn="@layout/activity_detall_grup_creador"
    android:layout_marginTop="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titol_detall_grup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/titol_detall_grup_creador"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/membres_detall_grup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/membres_titol_detall_grup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ubicacio_detall_grup" />

            <TextView
                android:id="@+id/idiomes_detall_grup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/idiomes_detall_grup_creador" />
        </RelativeLayout>

        <TextView
            android:id="@+id/descripcio_detall_grup_creador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/descripcio_detall_grup_creador" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/membres_grup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/titol_membres_detall_grup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Membres Grup:"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/espais_detall_grup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="3/3" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/integrant1_image"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/profile1" />

                    <TextView
                        android:id="@+id/integrant1_nom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Rupesh Pons"
                        android:layout_marginStart="10dp"
                        android:layout_gravity="center"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/is_admin"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_marginHorizontal="10dp"
                    android:layout_centerVertical="true"
                    android:text="Admin"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/integrant2_image"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/profile2" />

                    <TextView
                        android:id="@+id/integrant2_nom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Aldric Gutiérrez"
                        android:layout_marginStart="10dp"
                        android:layout_gravity="center"/>

                </LinearLayout>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/remove_participant_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    app:srcCompat="@drawable/ic_person_remove"
                    android:backgroundTint="@color/warningRed"
                    android:tintMode="@android:color/white"
                    android:layout_alignParentEnd="true"
                    app:fabSize="mini"
                    android:contentDescription="Expulsar Aldric"
                    android:focusable="true" />

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/integrant3_image"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/profile3" />

                    <TextView
                        android:id="@+id/integrant3_nom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Elias Asskali"
                        android:layout_marginStart="10dp"
                        android:layout_gravity="center"/>
                </LinearLayout>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/remove_participant2_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    app:srcCompat="@drawable/ic_person_remove"
                    android:backgroundTint="@color/warningRed"
                    android:tintMode="@android:color/white"
                    android:layout_alignParentEnd="true"
                    app:fabSize="mini"
                    android:contentDescription="Expulsar Elias"
                    android:focusable="true" />

            </RelativeLayout>

            <Button
                android:id="@+id/abandonar_admin_button"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="Abandonar Grup"
                android:backgroundTint="@color/warningRed"
                android:layout_margin="10dp"/>
        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>